eks/eks-ex/nginx-alb.yaml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.7-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"  # HPA 측정을 위한 필수 설정(nginx, 100m~500m)
          limits:
            cpu: "250m"  # requests의 2.5배(nginx)
---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# Loadbalancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-alb-ingress
  annotations: # 주석: k8s가 알아보기위한 주석
    # internet-facing: 외부 로드밸런서
    # internal: 내부 로드밸런서
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB의 스킴을 인터넷으로 설정
    # ip: IP 주소를 대상으로 하는 타겟 그룹 생성
    # instance: EC2 인스턴스를 대상(NodePort)으로 하는 타겟 그룹 생성
    alb.ingress.kubernetes.io/target-type: ip # ALB가 IP 주소를 대상으로 사용하도록 설정
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]' # 리스너의 포트번호
spec:
  ingressClassName: alb # ALB Ingress Controller가 이 Ingress 리소스를 처리하도록 지정
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service # Ingress가 트래픽을 라우팅할 서비스 이름
                port:
                  number: 80
